--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,9 @@
 name: git push into another repo to deploy to vercel
 
 on:
-	push:
-		branches: 'master'
+  push:
+    branches:
+      - 'master'
 
 jobs:
 	build:
